services/passenger-api-gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: backend
spec:
  type: LoadBalancer
  selector:
    app: kong-proxy
  ports:
  - name: proxy
    port: 80
    targetPort: 8000
  - name: proxy-ssl
    port: 443
    targetPort: 8443
  - name: admin
    port: 8444
    targetPort: 8444
