services/passenger-api-gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"   # strip /api from request path when forwarding
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /lt
        pathType: Prefix
        backend:
          service:
            name: location-tracker
            port:
              number: 80
      paths:
      - path: /cd
        pathType: Prefix
        backend:
          service:
            name: central-director
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visor-service
            port:
              number: 80
